# scoro

./: .clangd.in  .gitignore  CMakeLists.txt  CMakePresets.json  COPYING
include/: awaitable.hpp  awaiter.hpp  coro.hpp  expected.hpp  looper.hpp  meta.hpp  scheduler.hpp  sync.hpp  timer.hpp  waitable_atomic.hpp
include/container/: queue.hpp
include/detail/: meta.hpp
include/io/: io_uring.h  service.hpp  sqe_awaitable.hpp
include/ptr/: hazard_ptr.hpp  intrusive_ptr.hpp  rc_ptr.hpp
include/timer/: wheel.hpp
src/: main.cpp
src/io/: io_uring.c
test/: test_atomic_queue.cpp  test_io_uring.cpp
